final For 12/12
added a full GUI.